RESOLVED FIXED37081
Web Inspector: [REGRESSION] platform detection in Chromium has regressed to unknown.
https://bugs.webkit.org/show_bug.cgi?id=37081
Summary Web Inspector: [REGRESSION] platform detection in Chromium has regressed to u...
Pavel Feldman
Reported 2010-04-05 05:24:30 PDT
Patch to follow.
Attachments
[PATCH] Proposed fix. (5.38 KB, patch)
2010-04-05 05:31 PDT, Pavel Feldman
yurys: review+
Pavel Feldman
Comment 1 2010-04-05 05:31:38 PDT
Created attachment 52527 [details] [PATCH] Proposed fix.
Pavel Feldman
Comment 2 2010-04-05 05:38:02 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/bindings/js/JSInspectorFrontendHostCustom.cpp M WebCore/bindings/v8/custom/V8InspectorFrontendHostCustom.cpp M WebCore/inspector/InspectorFrontendHost.cpp M WebCore/inspector/InspectorFrontendHost.h M WebCore/inspector/InspectorFrontendHost.idl Committed r57069
WebKit Review Bot
Comment 3 2010-04-05 05:46:04 PDT
http://trac.webkit.org/changeset/57069 might have broken Chromium Linux Release
Eric Seidel (no email)
Comment 4 2010-04-05 10:42:55 PDT
You checkin hit https://bugs.webkit.org/show_bug.cgi?id=36779, and then the Leopard slave was lost. Sheriff bot doesn't yet understand "slave lost" but we plan to teach him that soon, bug 37099.
Note You need to log in before you can comment on or make changes to this bug.