2010-04-05  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: [REGRESSION] platform detection in Chromium
        has regressed to unknown.

        https://bugs.webkit.org/show_bug.cgi?id=37081

        * bindings/js/JSInspectorFrontendHostCustom.cpp:
        (WebCore::JSInspectorFrontendHost::platform):
        (WebCore::JSInspectorFrontendHost::port):
        * bindings/v8/custom/V8InspectorFrontendHostCustom.cpp:
        (WebCore::V8InspectorFrontendHost::platform):
        (WebCore::V8InspectorFrontendHost::port):
        * inspector/InspectorFrontendHost.cpp:
        * inspector/InspectorFrontendHost.h:
        * inspector/InspectorFrontendHost.idl:


Canonical link: https://commits.webkit.org/48362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57069 268f45cc-cd09-0410-ab3c-d52691b4dbfc