WebCore/inspector/InspectorFrontendHost.h
@@ -71,8 +71,6 @@ public:
 
     String localizedStringsURL();
     String hiddenPanels();
-    const String& platform() const;
-    const String& port() const;
 
     void copyText(const String& text);
 
